# fpo-near

./: Cargo.toml  README.md  build.sh  out.tmp
consumer/: Cargo.toml  README.md
consumer/scripts/: deploy_consumer.sh  deploy_requester.sh  fpo_agg_avg_call.sh  fpo_agg_median_call.sh  fpo_get_price_call.sh  fpo_get_prices_call.sh  get_pair.sh  reset_account.sh
consumer/src/: lib.rs
consumer/tests/sim/: main.rs
fpo/: Cargo.toml  README.md
fpo/scripts/: agg_avg.sh  agg_median.sh  create_pair.sh  deploy_fpo.sh  get_entry.sh  get_request.sh  new_request.sh  push_data.sh
fpo/src/: admin.rs  aggregate.rs  callbacks.rs  lib.rs  math.rs  price_pair.rs  provider.rs  registry.rs  storage_manager.rs
fpo/tests/sim/: main.rs
requester/: Cargo.toml
requester/scripts/: deploy_requester.sh  fpo_agg_avg_call.sh  fpo_agg_median_call.sh  get_pair.sh
requester/src/: lib.rs
requester/tests/sim/: main.rs
scripts/: agg_avg.sh  agg_median.sh  deploy_fpo.sh  get_entry.sh
src/: aggregate.rs  callbacks.rs  lib.rs  pair.rs  price_pair.rs  provider.rs  storage_manager.rs  utils.rs
tests/sim/: main.rs  utils.rs
